<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">打车通</string>
    <string name="user_name">用户名:</string>
    <string name="user_pwd">密  码:</string>
    <string name="pwd_retype">重复密码:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_register">用户注册</string>
    <string name="reset">重置</string>

</resources>